--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,19 @@ input[type='checkbox'] {
     -o-appearance: checkbox !important;
     appearance: checkbox !important;
 }
+
+/* dark background filter start*/
+/* .filter {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 5;
+    top: 0;
+    left: 0;
+    overflow-x: hidden;
+    padding-top: 60px;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.4);
+    scale: 1.0002;
+} */
+/* dark background filter end*/
